--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href = "https://github.com/shanky484/RTPCR/blob/main/COVIDTest_UStoIndia.pdf">RTPCR test report </a> </p>
+  <p><a href = "COVIDTest_UStoIndia.pdf">RTPCR test report </a> </p>
 </html>
