--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href = "RTPCR_Test_ShankarUnnithan.pdf">RTPCR test report </a> </p>
+  <p><a href = "RTPCR_Test_ShankarUnnithan.pdf">Click here to view COVID RT-PCR lab report</a> </p>
 </html>
